deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pma-gateway
  namespace: pma-gateway
spec:
  selector:
    app.kubernetes.io/name: pma-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
